# rs-training

./: Cargo.toml  README.md
src/: main.rs
src/common/: evolutionary_algorithm.rs  matrix.rs  mod.rs  neural_network.rs  rng.rs  tests.rs
src/exercises/: mod.rs  one_hundred_days_challenge.rs
src/exercises/general/: are_two_arrays_same.md  are_two_arrays_same.rs  break_camelcase.md  break_camelcase.rs  duplicate_encode.md  duplicate_encode.rs  good_vs_evil.md  good_vs_evil.rs  mod.rs  narcissistic_numbers.md  narcissistic_numbers.rs  product_fib.md  product_fib.rs  two_sum.md  two_sum.rs
src/exercises/nn_and_ml/: README.md  mod.rs
tests/: integration_test.rs
tools/: update_mods.sh  update_mods.ts
tools/scripts/: deno.json  update_mods.ts
